fix scrollbar ltr

--- a/src/components/Table/index.scss
+++ b/src/components/Table/index.scss
@@ -559,6 +559,7 @@ i.icon.filter::before {
 .pagination-container {
   display: flex !important;
   justify-content: space-between !important;
+  min-height: 48px;
 }
 
 @media (max-width: 2560px) {
